--- a/memes.css
+++ b/memes.css
@@ -1,24 +1,64 @@
-#Copyright {
-	color: gray;
-}
-
-#title {
-	text-align: center;
-	font-family: sans-serif, Arial;
-}
-
-h1 {
-	margin: 0;
-}
-
-h2 {
-	margin: 0;
-}
-
-#memes {
-	text-align: center;
-	font-family: sans-serif, Arial;
-}
-
-	
-	
+<!DOCTYPE html>
+<!--This site was written by: Decryptionite-->
+<html>
+		<div>
+			<head>
+				<title>Memes</title>
+				<link rel="stylesheet" type="text/css" href="memes.css" />
+			</head>
+		</div>
+		
+		<body>
+				<div id="title">
+					<h1>PVP Boys</h1>
+					<h2>Memes</h2>
+					<hr />
+				</div>
+				
+				<div id=pages>
+					<p align="center">
+					<a href="linkspage.html">
+					<button>Links</button>
+					</a>
+					<a href="index.html">
+					<button>Home</button>
+					</a>
+					<a href="archives.html">
+					<button>Archives</button>
+					</a>
+				</div>
+				
+				<div id=memes>
+					<img src="Memes/funnywidhwidwd.png" />
+					<p>Minecraft.</p>
+					<p></p>
+					<img src="Memes/wdovuodwwdvodhwdw.png" />
+					<p>Made for @sleepyheadhoney (Twitter.)</p>
+					<p></p>
+					<img src="Memes/ross0932.png" />
+					<p>Made for ross0932.</p>
+					<p></p>
+					<img src="Memes/yadner_ewghdiwdw.png" />
+					<p>Yandere Dev.</p>
+					<p></p>
+					<img src="Memes/funnyimage.png" />
+					<p>Made for Colin.</p>
+					<p></p>
+					<img src="Memes/wudhwidhwdw.png" />
+					<p>No information is remembered for this one.</p>
+					<p></p>
+					<img src="Memes/widgwgudwudwdw.png" />
+					<p>Made for the "ChriszThedude Server" created by ChriszThedude.</p>
+					<p></p>
+					<img src="Memes/dueduywg edwdwgdwdg.png" />
+					<p>Made in a VC in the ChriszThedude server.</p>
+					More to be added.
+					
+				</div>
+				
+			<hr />
+					<div id="Copyright">
+						<p>Copyright &copy; 2022 Decryptionite
+					</div>
+		
+		</body>
