--- a/index.css
+++ b/index.css
@@ -2,23 +2,38 @@
 	color: gray;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #4c4c4c;
+}
+
 #title {
-	text-align: center;
 	font-family: sans-serif, Arial;
+	background-color: #262626;
+	margin: 0;
+	padding: 0;
+	height: 100%;
 }
 
 #main_text {
 	text-align: center;
 	font-family: sans-serif, Arial;
+	color: #04AA6D;
+	font-size: 25px;
+	top: 120px;
+}
+
+#nindees {
+	position: absolute;
+	bottom: 20px;
+	top: 130px;
+	float: top;
 }
 
 #image {
-	text-align: center;
-}
-
-#twitter {
-	text-align: center;
-	font-family: sans-serif, Arial;
+	text-align: left;
 }
 
 h1 {
@@ -29,6 +44,32 @@ h2 {
 	margin: 0;
 }
 
+#hr_bottom	{
+background-color: gray;
+border-color: gray;
+}
 
+#topnav {
+  background-color: #333;
+  overflow: hidden;
+}
 
+#topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family:  sans-serif, Arial;
+}
 
+#topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
