--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ body {
 }
 
 #image {
-	text-align: left;
+	text-align: center;
 }
 
 h1 {
@@ -73,3 +73,10 @@ border-color: gray;
   background-color: #04AA6D;
   color: white;
 }
+
+
+
+
+
+
+
