--- a/linkspage.css
+++ b/linkspage.css
@@ -1,3 +1,44 @@
 #Copyright {
 	color: gray;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #4c4c4c;
+}
+
+#title {
+	font-family: sans-serif, Arial;
+	background-color: #262626;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+
+
+#topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+#topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family:  sans-serif, Arial;
+}
+
+#topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
