--- a/archives.css
+++ b/archives.css
@@ -3,8 +3,18 @@
 }
 
 #title {
-	text-align: center;
 	font-family: sans-serif, Arial;
+	background-color: #262626;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #4c4c4c;
 }
 
 h1 {
@@ -13,4 +23,34 @@ h1 {
 
 h2 {
 	margin: 0;
+}
+
+#topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+#hr_bottom	{
+background-color: gray;
+border-color: gray;
+}
+
+#topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family:  sans-serif, Arial;
+}
+
+#topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#topnav a.active {
+  background-color: #04AA6D;
+  color: white;
 }
